litellm-rust/crates/traces/tests/snapshots/normalize__query_alternate.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "fixture",
    "name": "alternate",
    "display_name": "alternate",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
