litellm-rust/crates/traces/tests/snapshots/normalize__query_children.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "fixture",
    "name": "completion",
    "display_name": "completion",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 12,
    "output_tokens": 6,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:response-shared"
    ],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "fixture",
    "name": "lookup",
    "display_name": "lookup",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  }
]
