litellm-rust/crates/traces/tests/snapshots/normalize__query_other_team.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "fixture",
    "name": "other-team",
    "display_name": "other-team",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:response-shared"
    ],
    "tool_call_id": "",
    "input_preview": ""
  }
]
