litellm-rust/crates/traces/tests/snapshots/normalize__query_root.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "fixture",
    "name": "review",
    "display_name": "review",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": true,
    "agent": "",
    "framework": "",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Review the change"
  }
]
