litellm-rust/crates/traces/tests/snapshots/normalize__strands_simple.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 109,
    "output_tokens": 139,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkhucKV44lL6Mb9AolIjjDge2qHF"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "invoke_agent research_agent",
    "display_name": "invoke_agent research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 109,
    "output_tokens": 139,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
