litellm-rust/crates/traces/tests/snapshots/normalize__strands_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 108,
    "output_tokens": 47,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0e3bf9a6f191cae4006ac07654fb2087d0ad33a85bb88ea1a3"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 133,
    "output_tokens": 573,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUki6UzcaudVqfM9PZN8O8F4t3SGc"
    ],
    "tool_call_id": "",
    "input_preview": "Find clear factual definition of an agent trace in AI/LLM systems, what it records and why useful; note ambiguity if term has other meanings."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Find clear factual definition of an agent trace in AI/LLM systems, what it records and why useful; note ambiguity if term has other meanings."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "invoke_agent search_agent",
    "display_name": "invoke_agent search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 133,
    "output_tokens": 573,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Find clear factual definition of an agent trace in AI/LLM systems, what it records and why useful; note ambiguity if term has other meanings."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_tool search_agent",
    "display_name": "execute_tool search_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_8vf3W3IGDvg6gxoZJ0jU1xA0",
    "input_preview": ""
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"text\": \"### Definition\\n\\nAn **agent trace** is a structured, time-ordered record of the events in a particular AI-agent run: what the system received, what steps it took, which models or tools it invoked, and how the run ended. In syste"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 503,
    "output_tokens": 54,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_065f275d379bee64006ac0765d305c87d0a068bf4eef0b97b3"
    ],
    "tool_call_id": "",
    "input_preview": "[{\"text\": \"### Definition\\n\\nAn **agent trace** is a structured, time-ordered record of the events in a particular AI-agent run: what the system received, what steps it took, which models or tools it invoked, and how the run ended. In syste"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 140,
    "output_tokens": 95,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkiFd4jHFLYhgaumrIGfaG45kOQy"
    ],
    "tool_call_id": "",
    "input_preview": "Answer user simply: What is an agent trace? Use definition, examples of recorded data, purpose, qualify variability and that it is not necessarily chain-of-thought. Avoid jargon overload."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Answer user simply: What is an agent trace? Use definition, examples of recorded data, purpose, qualify variability and that it is not necessarily chain-of-thought. Avoid jargon overload."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "invoke_agent writer_agent",
    "display_name": "invoke_agent writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 140,
    "output_tokens": 95,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Answer user simply: What is an agent trace? Use definition, examples of recorded data, purpose, qualify variability and that it is not necessarily chain-of-thought. Avoid jargon overload."
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_tool writer_agent",
    "display_name": "execute_tool writer_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_Kd70sWG5KDjfmZXqupbHdiHm",
    "input_preview": ""
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"text\": \"An **agent trace** is a record of what an AI agent did during a task, step by step. It might include the user’s request, the agent’s actions and tool calls, tool results, and the final response.\\n\\nTraces help people debug proble"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "chat",
    "display_name": "chat",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 660,
    "output_tokens": 77,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0ff6d9fd1fbf6ef5006ac07661131087d0a60517f8bb59c782"
    ],
    "tool_call_id": "",
    "input_preview": "[{\"text\": \"An **agent trace** is a record of what an AI agent did during a task, step by step. It might include the user’s request, the agent’s actions and tool calls, tool results, and the final response.\\n\\nTraces help people debug proble"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "execute_event_loop_cycle",
    "display_name": "execute_event_loop_cycle",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "strands",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "[{\"text\": \"An **agent trace** is a record of what an AI agent did during a task, step by step. It might include the user’s request, the agent’s actions and tool calls, tool results, and the final response.\\n\\nTraces help people debug proble"
  },
  {
    "scope": "strands.telemetry.tracer",
    "name": "invoke_agent research_agent",
    "display_name": "invoke_agent research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "strands",
    "model": "openai/gpt-6-luna",
    "input_tokens": 1271,
    "output_tokens": 178,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
