litellm-rust/crates/traces/tests/snapshots/normalize__vercel_ai_sdk_swarm.snap
---
source: crates/traces/tests/normalize.rs
expression: projected
---
[
  {
    "scope": "gen_ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 92,
    "output_tokens": 69,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_00c640c04508e21b006ac076764e3887d08bfb0ceb8316392a"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "gen_ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 69,
    "output_tokens": 519,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkieMNDSj3CV37yrhgcNxCrWxNi9"
    ],
    "tool_call_id": "",
    "input_preview": "Explain what an agent trace is in AI/LLM systems. Gather key facts: definition, what it records (steps, tool calls, inputs/outputs, reasoning/state), common use cases, clarify terminology varies and distinguish from chain-of-thought if rele"
  },
  {
    "scope": "gen_ai",
    "name": "step 1",
    "display_name": "step 1",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "gen_ai",
    "name": "invoke_agent search_agent",
    "display_name": "invoke_agent search_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "search_agent",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 69,
    "output_tokens": 519,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Explain what an agent trace is in AI/LLM systems. Gather key facts: definition, what it records (steps, tool calls, inputs/outputs, reasoning/state), common use cases, clarify terminology varies and distinguish from chain-of-thought if rele"
  },
  {
    "scope": "gen_ai",
    "name": "execute_tool search_agent",
    "display_name": "execute_tool search_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_f5VudOHFJqmorrS6E2UkzMXA",
    "input_preview": "{\"request\":\"Explain what an agent trace is in AI/LLM systems. Gather key facts: definition, what it records (steps, tool calls, inputs/outputs, reasoning/state), common use cases, clarify terminology varies and distinguish from chain-of-tho"
  },
  {
    "scope": "gen_ai",
    "name": "step 1",
    "display_name": "step 1",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "gen_ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 548,
    "output_tokens": 116,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_01071a953287dd20006ac0767e0ea487d0a559f27787e1b5da"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "gen_ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 118,
    "output_tokens": 82,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:chatcmpl-EUkimrnROYSRhSjastMH9U5zJy9st"
    ],
    "tool_call_id": "",
    "input_preview": "Answer the user’s simple question “What is an agent trace?” Use supplied facts: A record of how an AI agent executed a task, sequence of model steps/tool interactions/outputs/state changes; often includes prompts/responses, tool calls and r"
  },
  {
    "scope": "gen_ai",
    "name": "step 1",
    "display_name": "step 1",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "gen_ai",
    "name": "invoke_agent writer_agent",
    "display_name": "invoke_agent writer_agent",
    "root": false,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "writer_agent",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 118,
    "output_tokens": 82,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "Answer the user’s simple question “What is an agent trace?” Use supplied facts: A record of how an AI agent executed a task, sequence of model steps/tool interactions/outputs/state changes; often includes prompts/responses, tool calls and r"
  },
  {
    "scope": "gen_ai",
    "name": "execute_tool writer_agent",
    "display_name": "execute_tool writer_agent",
    "root": false,
    "observation_type": "tool",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "call_i6JxWU4lL4nWnP40uXS4OijF",
    "input_preview": "{\"request\":\"Answer the user’s simple question “What is an agent trace?” Use supplied facts: A record of how an AI agent executed a task, sequence of model steps/tool interactions/outputs/state changes; often includes prompts/responses, tool"
  },
  {
    "scope": "gen_ai",
    "name": "step 2",
    "display_name": "step 2",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "gen_ai",
    "name": "chat openai/gpt-6-luna",
    "display_name": "chat openai/gpt-6-luna",
    "root": false,
    "observation_type": "llm",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 754,
    "output_tokens": 74,
    "call_evidence": "complete",
    "call_keys": [
      "provider_response:resp_0266bfc18e64351b006ac076819d2487d0bc43c204019ae202"
    ],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  },
  {
    "scope": "gen_ai",
    "name": "step 3",
    "display_name": "step 3",
    "root": false,
    "observation_type": "chain",
    "wrapper_candidate": false,
    "agent": "",
    "framework": "vercel-ai-sdk",
    "model": "",
    "input_tokens": 0,
    "output_tokens": 0,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": ""
  },
  {
    "scope": "gen_ai",
    "name": "invoke_agent research_agent",
    "display_name": "invoke_agent research_agent",
    "root": true,
    "observation_type": "agent",
    "wrapper_candidate": false,
    "agent": "research_agent",
    "framework": "vercel-ai-sdk",
    "model": "openai/gpt-6-luna",
    "input_tokens": 1394,
    "output_tokens": 259,
    "call_evidence": "unknown",
    "call_keys": [],
    "tool_call_id": "",
    "input_preview": "What is an agent trace?"
  }
]
